--- a/bounty/programs/bounty/Cargo.toml
+++ b/bounty/programs/bounty/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "arcium_mxe"
+name = "bounty"
 version = "0.1.0"
 description = "Created with Arcium & Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "arcium_mxe"
+name = "bounty"
 
 [features]
 default = []
