--- a/mxe/programs/mxe/Cargo.toml
+++ b/mxe/programs/mxe/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "bounty"
+name = "mxe"
 version = "0.1.0"
 description = "Created with Arcium & Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "bounty"
+name = "mxe"
 
 [features]
 default = []
