--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@arcium-hq/client": "^0.2.0",
+    "@arcium-hq/reader": "^0.2.0",
     "@project-serum/anchor": "^0.26.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "@tabler/icons-react": "^3.34.1",
     "@tsparticles/engine": "^3.5.0",
@@ -24,17 +29,22 @@
     "@tsparticles/slim": "^3.5.0",
     "axios": "^1.7.3",
     "buf": "^0.1.1",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "ethers": "^6.13.2",
     "framer-motion": "^11.3.22",
     "lucide-react": "^0.424.0",
     "motion": "^12.23.12",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.0",
     "simplex-noise": "^4.0.3",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
@@ -42,6 +52,8 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
