--- a/mxe/Anchor.toml
+++ b/mxe/Anchor.toml
@@ -6,14 +6,14 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-computebounty = "FzcGDfci4AketBSehtWsvZAoE9k4Kd3ZZNar9nKn3gj3"
+computebounty = "6MUHFNw3WeuDP1Gm1UZR1yUouN6nVYguBEHEF2vmw5Dt"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "localnet"
-wallet = "/home/nitin/.config/solana/id.json"
+wallet = "/Users/nitinjha/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
